--- a/translations/messages.us.yml
+++ b/translations/messages.us.yml
@@ -68,16 +68,16 @@ beeriously.brewery.brewer_removed_successfully: 'Brewer account deleted successf
 beeriously.brewery.brewer_added_successfully: 'Brewer account added successfully'
 beeriously.ajax.default_error_message: 'Sorry, you are not currently logged in or an unknown error has occurred. Please refresh the page to continue.'
 beeriously.brewery.history.event.brewer_was_removed: 'Brewer "%brewer_full_name%" was removed'
-beeriously.brewer.registration.invalid_username: 'Username is not allowed'
+beeriously.brewer.registration.invalid_username: 'Username is not allowed. No spaces, special characters, or emojis.'
 beeriously.brewer.registration.password_too_short: 'Password is too short'
 beeriously.brewer.registration.password_can_not_match_email_or_username: 'Password can not match username or email'
 beeriously.brewer.name: 'Brewer Name'
 beeriously.profile.change_name: 'Change Name'
-beeriously.profile.change_username_or_email: Change Username or Email
+beeriously.profile.change_username_or_email: 'Change Username or Email'
 beeriously.profile.password: Password
-beeriously.profile.change_password: Change Password
-beeriously.profile.view_brewery_settings: View Brewery Settings
-beeriously.profile.brewery_name: Brewery Name
-
-beeriously.profile.name_changed_successfully: Brewer Name Changed Successfully
+beeriously.profile.change_password: 'Change Password'
+beeriously.profile.view_brewery_settings: 'View Brewery Settings'
+beeriously.profile.brewery_name: 'Brewery Name'
+beeriously.profile.name_changed_successfully: 'Brewer Name Changed Successfully'
 beeriously.brewery.history.event.brewer_name_change: 'Brewer "%brewer_full_name%" name was changed'
+beeriously.profile.photo: Photo
