--- a/translations/messages.us.yml
+++ b/translations/messages.us.yml
@@ -1,14 +1,18 @@
 beeriously.ajax.default_error_message: 'Sorry, you are not currently logged in or an unknown error has occurred. Please refresh the page to continue.'
-beeriously.brewer.exception.BrewerAccountAlreadyExistsException: 'An account already exists with that email or username. If you want to merge an existing account please contact support@beeriously.com and provide a telephone nubmer to verify identity.'
+beeriously.brewer.email.salutation: 'Hello %username%!'
+beeriously.brewer.exception.BrewerAccountAlreadyExistsException: 'An account already exists with that email or username. If you want to merge an existing account please contact support@beeriously.com.'
 beeriously.brewer.name: 'Brewer Name'
 beeriously.brewer.registration.email.button_text: 'Activate Your Account'
 beeriously.brewer.registration.email.message: 'To finish activating your account - please click the activation button:'
 beeriously.brewer.registration.email.message_alt_text: "Hello %username%!\n\nTo finish activating your account - please visit %confirmationUrl%\n\nThis link can only be used once to validate your account.\n"
-beeriously.brewer.registration.email.salutation: 'Hello %username%!'
 beeriously.brewer.registration.email.subject: 'Welcome to Beeriously %username%!'
 beeriously.brewer.registration.invalid_username: 'Username is not allowed. No spaces, special characters, or emojis.'
 beeriously.brewer.registration.password_can_not_match_email_or_username: 'Password can not match username or email'
 beeriously.brewer.registration.password_too_short: 'Password is too short'
+beeriously.brewer.resetting.email.button_text: Reset Password
+beeriously.brewer.resetting.email.message: 'To reset your password - please click the button below:'
+beeriously.brewer.resetting.email.message_alt_text: "Hello %username%!\n\nTo reset your password - please visit %confirmationUrl%"
+beeriously.brewer.resetting.email.subject: 'Reset Password'
 beeriously.brewery.add_an_assistant_brewer: 'Add an Assistant Brewer'
 beeriously.brewery.brewer_added_successfully: 'Brewer account added successfully'
 beeriously.brewery.brewer_removed_successfully: 'Brewer account deleted successfully'
@@ -75,8 +79,6 @@ beeriously.profile.password: Password
 beeriously.profile.photo: Photo
 beeriously.profile.photo_changed_successfully: 'User photo changed successfully.'
 beeriously.profile.view_brewery_settings: 'View Brewery Settings'
-beeriously.resetting.email.message: "Hello %username%!\n\nTo reset your password - please visit %confirmationUrl%"
-beeriously.resetting.email.subject: 'Reset Password'
 beeriously.security.back_to_login: '< Back to Login'
 beeriously.security.forgot.password: 'Forgot Password?'
 beeriously.security.register.continue_to_dashboard: 'Continue to the Beeriously Dashboard >'
